# dario-orchestrator

./: .gitignore  LICENSE  README.md
orchestrator/: .license  ANTI_PIRACY.md  COGNITIVE-AUDIT-v11.1.md  CONVENTIONS.md  DR_RUNBOOK.md  LICENSE  MANUAL.md  PADRAO_A_AB_TEST_RESULTS.md  README.md  RFC_MULTI_TENANT.md  RFC_STRATEGIC_DECISIONS.md  ROADMAP_MULTINATIONAL.md  SLOs.md  UPGRADE-v12.0-to-v12.1.md  UPGRADE-v12.1-design-stack.md  VERTICALS_ARCHIVE.md  _inject_nav.py  _nav_fragment.html  agent-visualizer.html  agent_display.html  api_executor.py  assemble_bundle.py  auth.py  autodiag.yaml  autodiag_runner.py  bank_parser.py  budget_tracker.py  build_obfuscated.py  cfo_dashboard.html  chain_executor.py  chain_schemas.py  chain_validator.py  checkpoint_interrupt.py  cognitive_dashboard.html  cognitive_dashboard.py  company.yaml  composite_modes.yaml  confidence_engine.py  context_injector.py  core_upgrades.py  (+79 more)
orchestrator/aegis/: manifesto.yaml
orchestrator/atlas-fin/: manifesto.yaml
orchestrator/bundles/: founder.yaml
orchestrator/campus/: manifesto.yaml
orchestrator/chains/: client_onboarding.yaml  idea_to_landing_page.yaml
orchestrator/cognitive/: __init__.py  chain_graph.py  composite_memory_scoring.py  context_injector.py  dynamic_branch.py  episode_promoter.py  human_review_queue.py  memory_blocks.py  predictor.py  synaptic_update.py
orchestrator/config/: company_loader.py  memory_dream.yaml  padrao_a_briefing_validators.yaml  project_types.yaml
orchestrator/core/: __init__.py  artifact_schemas.py  audit_logger.py  audit_signing.py  create_batch_tasks.py  db.py  export_outputs.py  install_service.py  lifecycle_hooks.py  obsidian_safe_write.py  org_tree.py  runtime.py  secrets.py  session_boot.py  skill_store.py  sla.py  state_machine.py  task_spec.py  task_store.py  task_sync.py  task_templates.py  tier3.py
orchestrator/demeter/: manifesto.yaml
orchestrator/dispatch/: __init__.py  dispatch_cot.py  dispatch_engine.py  model_router.py  semantic_dispatch.py
orchestrator/dream/: __init__.py  convergence.py  engine.py  merge.py  orient.py  pattern_detector.py  prune.py  reorganize.py
orchestrator/durable/: DEPRECATED.md  __init__.py  activities.py  worker.py  workflow.py
orchestrator/enforcement/: __init__.py  budget_gate.py  dispatch_validator.py  parallelism_guard.py  token_capture.py
orchestrator/euterpe/: manifesto.yaml
orchestrator/execution/: __init__.py  chain_validator.py  checkpoint_interrupt.py  completion_hooks.py  evolution_runner.py  executor.py  hierarchical_process.py  lifecycle.py  pipeline.py  replanner.py  suspend_resume.py  workflow_graph.py
orchestrator/finance/: __init__.py  budget_tracker.py  financial_dashboard.py  freelancers.yaml  model_pricing.yaml  output_schemas.yaml  receivables.yaml  revenue_roi.py  tax_calendar.yaml
orchestrator/gaia/: manifesto.yaml
orchestrator/helios/: manifesto.yaml
orchestrator/kirion/: manifesto.yaml
orchestrator/lex-br/: README.md  manifesto.yaml
orchestrator/license_server/: Dockerfile  README.md  __init__.py  app.py  db.py
orchestrator/licensing/: __init__.py  license_client.py  license_guard.py  license_manager.py
orchestrator/medik/: manifesto.yaml
orchestrator/memory/: README.md  __init__.py  backfill_from_audit.py  backfill_workflow_usage.py  cache.py  cleanup_legacy.py  config.py  decay.py  episodic.py  hooks.py  procedural.py  retrieval.py  schemas.py  semantic.py  semantic_search.py
orchestrator/mercurius/: manifesto.yaml
orchestrator/meta/: __init__.py  assemble_bundle.py  dream_cli.py
orchestrator/nomos/: manifesto.yaml
orchestrator/observability/: __init__.py  cognitive_dashboard.py  dashboard_data.py  generate_dashboard.py  otel_setup.py  timeline.py  token_meter.py  tracer.py  weekly_summary.py
orchestrator/obsidian-corp/: manifesto.yaml
orchestrator/optimization/: DSPY_ROOT_CAUSE.md  RUN_COMPILE.md  __init__.py  compile_sprint3.py  compile_sprint3_v2.py  compile_sprint4.py  evals.py  optimize_skill.py  programs.py  seed_brand_goldens.py  signatures.py  signatures_v2.py
orchestrator/oraculo/: manifesto.yaml
orchestrator/orion/: manifesto.yaml
orchestrator/parsers/: __init__.py  bank_parser.py  saft_parser.py  tax_calendar.py
orchestrator/prometheus/: README.md
orchestrator/providers/: __init__.py  anthropic.py
orchestrator/quality/: INVENTORY.md  RESTORATION_AUDIT_2026_05_25.md  __init__.py  adaptive_rubric.py  adversarial_verify.py  client-revenue.yaml.example  domain-playbooks.yaml  eval-baseline.yaml  eval_drilldown.py  golden_eval.py  llm_evaluators.py  llm_judge.py  quality_scorer.py  reconcile_skill_metrics.py  score_bundle.py
orchestrator/reliability/: __init__.py  error_handlers.py  output_guardrails.py  reactive_subscriptions.py  termination.py
orchestrator/runners/: __init__.py  autodiag.py  evolution.py
orchestrator/safety/: SANDBOX_GAP_ANALYSIS.md  __init__.py  approval_gates.py  ethical_gate.py  guardrails.py  prompt_shield.py  sandbox.py
orchestrator/schemas/: __init__.py  contracts.py
orchestrator/scripts/: add_gate7_status_checklist.py  aggregate_api_spend.py  aggregate_polished_metrics.py  anthropic_spend_wrapper.py  auto_capture_hourly.bat  auto_capture_obsidian.py  backfill_token_capture.py  backfill_yaml_tasks_to_db.py  backup_install_cron.ps1  backup_weekly.sh  batch_refactor_all_workers.py  batch_refactor_skills.py  batch_score_obsidian.py  bootstrap_cuidai_taskboard.py  budget_breakdown_by_type.py  budget_tracker.py  check_model_drift.py  checkout_wave.py  close_cui005.py  close_patches_006_009.py  closeout_wave.py  compute_client_stats.py  (+29 more)
(+906 files in other folders)
